fixed distorted backgrounds

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: #040812;
+  background-color: #0D1117;
   overflow-x: hidden;
   color: #ffff;
 }
